
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.2 (rev 7xx - March XX, 2006)
====================================

* Better unistalled message/design from Zi. (755)
* captchaClass.php merged into veriword.php (which was only 5 lines). (753,754)
* Fixed styling for QuickEdit content editing link (752)
* Fixed meta tag generation bug to move underscore to hyphen (751)
* Changed site_snippets.properties to text data type to allow for longer property strings (749)
* Changes [~~] tag parsing/makeUrl so that it won't try to parse non-numeric [~~] tags. Added an option to force makeUrl to output an http or https link. (748)
* Order manager lists alphabeltically: manager/web users and permissions and content (747) 
* Installer update: Don't show the scary info about having to chmod files unless we actually need the user to do that (742)
* Installer update: Reversed logic in checking for the config.inc.php file. Now if we can create it automagically we don't bother the user with it. (741)
* Force main menu refresh after adding/deleting a module (actually on opening modules.static.action.php) (736)
* Add ability to use [~...~] tags in weblinks (references) at line 1064 in the parser (735)
* New plugin: Auto-inherrit parent folder template when creating new documents see http://modxcms.com/forums/index.php/topic,1092.0.html (725)
* List all modules in the menu thanks to Susan Ottwell see http://modxcms.com/forums/index.php/topic,3279.msg23388.html (724)
* Fix redirect to return full URL for header redirects. See http://modxcms.com/forums/index.php/topic,2054.msg14406.html (723)
* International install fixes (720, 721)
* [FS 202] ALTER statement corrections for installation on WAMP (fix submitted by Michel <mvt91@free.fr>) (717)