@@ -455,7 +455,7 @@ function getWebSignuptpl(){
 			  <td valign="top">Form code:*</td>
 			  <td>
 			  <input type="text" name="formcode" class="inputBox" style="width:150px" size="20">
-			  <a href="[+action+]"><img align="top" src="manager/includes/veriword.php?rand=<? echo rand(); ?>" width="148" height="60" alt="If you have trouble reading the code, click on the code itself to generate a new random code." style="border: 1px solid #003399"></a>
+			  <a href="[+action+]"><img align="top" src="manager/includes/veriword.php?rand=<?php echo rand(); ?>" width="148" height="60" alt="If you have trouble reading the code, click on the code itself to generate a new random code." style="border: 1px solid #003399"></a>
 			  </td>
 			</tr>
 			<tr>
