@@ -253,7 +253,7 @@ function showHide(what, onoff){
 				<hr />
 			</td>
 		  </tr>
-		  <? } ?>
+		  <?php } ?>
 		  <tr id="editname" style="display:<?php echo $_GET['a']=='87'||(isset($usernamedata['oldusername']) && $usernamedata['oldusername']!=$usernamedata['username']) ? $displayStyle : 'none' ; ?>">
 			<td><?php echo $_lang['username']; ?>:</td>
 			<td>&nbsp;</td>
